--- a/tower_hanoi_algorithm.ipynb
+++ b/tower_hanoi_algorithm.ipynb
@@ -41,7 +41,7 @@
     "def hanoi(ndisks, startPeg=1, endPeg=3): # 2^N\n",
     "  if ndisks:\n",
     "    hanoi(ndisks-1, startPeg, 6-startPeg-endPeg)\n",
-    "    print(f\"Move disk {ndisks} from peg {startPeg} to peg {endPeg}\")\n",
+    "    # print(f\"Move disk {ndisks} from peg {startPeg} to peg {endPeg}\")\n",
     "    hanoi(ndisks-1, 6-startPeg-endPeg, endPeg)"
    ]
   },
@@ -3501,6 +3501,7 @@
     "resultados_com_menor_loss = []\n",
     "repeat = 5\n",
     "registros = []\n",
+    "unary_operators_list = [\"log\", \"square\", \"cube\", \"sqrt\", \"round\", \"exp\", \"abs\"]\n",
     "\n",
     "original_stdout = sys.stdout\n",
     "\n",
@@ -3512,7 +3513,7 @@
     "    # first combination\n",
     "    reg1 = PySRRegressor(\n",
     "      binary_operators=[\"*\", \"+\"],\n",
-    "      unary_operators=[],\n",
+    "      unary_operators=unary_operators_list\n",
     "    )\n",
     "\n",
     "    fit1 = reg1.fit(X_reshaped, y)\n",
@@ -3527,7 +3528,7 @@
     "    # second combination\n",
     "    reg2 = PySRRegressor(\n",
     "      binary_operators=[\"*\"],\n",
-    "      unary_operators=[],\n",
+    "      unary_operators=unary_operators_list\n",
     "    )\n",
     "\n",
     "    fit2 = reg2.fit(X_reshaped, y)\n",
@@ -3541,7 +3542,7 @@
     "    # third combinarion\n",
     "    reg3 = PySRRegressor(\n",
     "      binary_operators=[\"+\"],\n",
-    "      unary_operators=[],\n",
+    "      unary_operators=unary_operators_list\n",
     "    )\n",
     "\n",
     "    fit3 = reg3.fit(X_reshaped, y)\n",
@@ -3561,7 +3562,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "registros_ = registros"
+    "registros_ = registros\n",
+    "file_pickle = 'dados_v2.pck'"
    ]
   },
   {
@@ -3615,7 +3617,7 @@
     "  with open(arquivo, 'wb') as f:\n",
     "    pickle.dump(dados_exist, f)\n",
     "  \n",
-    "caminho_arquivo = 'dados.pickle'\n",
+    "caminho_arquivo = file_pickle\n",
     "novos_dados = lista_melhor_valor[0:3] + [lista_melhor_valor[4]]\n",
     "\n",
     "salvar_dados(novos_dados, 'tower_hanoi_2^N', caminho_arquivo)"
@@ -3697,7 +3699,7 @@
     "        dados = pickle.load(f)\n",
     "    return dados\n",
     "\n",
-    "caminho_arquivo = 'dados.pickle'\n",
+    "caminho_arquivo = file_pickle\n",
     "dados_carregados = carregar_dados(caminho_arquivo)\n",
     "\n",
     "print(\"Conteúdo do arquivo pickle:\")\n",
