--- a/karatsuba_algorithm.ipynb
+++ b/karatsuba_algorithm.ipynb
@@ -1294,6 +1294,7 @@
     "resultados_com_menor_loss = []\n",
     "repeat = 4\n",
     "registros = []\n",
+    "unary_operators_list = [\"log\", \"square\", \"cube\", \"sqrt\", \"round\", \"exp\", \"abs\"]\n",
     "\n",
     "original_stdout = sys.stdout\n",
     "\n",
@@ -1305,7 +1306,7 @@
     "    # first combination\n",
     "    reg1 = PySRRegressor(\n",
     "      binary_operators=[\"*\", \"+\"],\n",
-    "      unary_operators=[\"log\", \"square\", \"cube\"],\n",
+    "      unary_operators=unary_operators_list\n",
     "    )\n",
     "\n",
     "    fit1 = reg1.fit(X_reshaped, y)\n",
@@ -1320,7 +1321,7 @@
     "    # second combination\n",
     "    reg2 = PySRRegressor(\n",
     "      binary_operators=[\"*\"],\n",
-    "      unary_operators=[\"log\", \"square\", \"cube\"],\n",
+    "      unary_operators=unary_operators_list\n",
     "    )\n",
     "\n",
     "    fit2 = reg2.fit(X_reshaped, y)\n",
@@ -1334,7 +1335,7 @@
     "    # third combinarion\n",
     "    reg3 = PySRRegressor(\n",
     "      binary_operators=[\"+\"],\n",
-    "      unary_operators=[\"log\", \"square\", \"cube\"],\n",
+    "      unary_operators=unary_operators_list\n",
     "    )\n",
     "\n",
     "    fit3 = reg3.fit(X_reshaped, y)\n",
@@ -1355,7 +1356,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "registros_ = registros"
+    "registros_ = registros\n",
+    "file_pickle = 'dados_v2.pck'"
    ]
   },
   {
@@ -1409,7 +1411,7 @@
     "  with open(arquivo, 'wb') as f:\n",
     "    pickle.dump(dados_exist, f)\n",
     "\n",
-    "caminho_arquivo = 'dados.pickle'\n",
+    "caminho_arquivo = file_pickle\n",
     "novos_dados = lista_melhor_valor[0:3] + [lista_melhor_valor[4]]\n",
     "\n",
     "salvar_dados(novos_dados, 'karatsuba_N^1.585', caminho_arquivo)"
@@ -1499,7 +1501,7 @@
     "        dados = pickle.load(f)\n",
     "    return dados\n",
     "\n",
-    "caminho_arquivo = 'dados.pickle'\n",
+    "caminho_arquivo = file_pickle\n",
     "dados_carregados = carregar_dados(caminho_arquivo)\n",
     "\n",
     "print(\"Conteúdo do arquivo pickle:\")\n",
