--- a/shellsort_algorithm.ipynb
+++ b/shellsort_algorithm.ipynb
@@ -1556,6 +1556,7 @@
     "resultados_com_menor_loss = []\n",
     "repeat = 5\n",
     "registros = []\n",
+    "unary_operators_list = [\"log\", \"square\", \"cube\", \"sqrt\", \"round\", \"exp\", \"abs\"]\n",
     "\n",
     "original_stdout = sys.stdout\n",
     "\n",
@@ -1567,7 +1568,7 @@
     "    # first combination\n",
     "    reg1 = PySRRegressor(\n",
     "      binary_operators=[\"*\", \"+\"],\n",
-    "      unary_operators=[\"log\", \"square\", \"cube\"],\n",
+    "      unary_operators=unary_operators_list\n",
     "    )\n",
     "\n",
     "    fit1 = reg1.fit(X_reshaped, y)\n",
@@ -1582,7 +1583,7 @@
     "    # second combination\n",
     "    reg2 = PySRRegressor(\n",
     "      binary_operators=[\"*\"],\n",
-    "      unary_operators=[\"log\", \"square\", \"cube\"],\n",
+    "      unary_operators=unary_operators_list\n",
     "    )\n",
     "\n",
     "    fit2 = reg2.fit(X_reshaped, y)\n",
@@ -1596,7 +1597,7 @@
     "    # third combinarion\n",
     "    reg3 = PySRRegressor(\n",
     "      binary_operators=[\"+\"],\n",
-    "      unary_operators=[\"log\", \"square\", \"cube\"],\n",
+    "      unary_operators=unary_operators_list\n",
     "    )\n",
     "\n",
     "    fit3 = reg3.fit(X_reshaped, y)\n",
@@ -1617,7 +1618,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "registros_ = registros"
+    "registros_ = registros\n",
+    "file_pickle = 'dados_v2.pck'"
    ]
   },
   {
@@ -1671,7 +1673,7 @@
     "  with open(arquivo, 'wb') as f:\n",
     "    pickle.dump(dados_exist, f)\n",
     "  \n",
-    "caminho_arquivo = 'dados.pickle'\n",
+    "caminho_arquivo = file_pickle\n",
     "novos_dados = lista_melhor_valor[0:3] + [lista_melhor_valor[4]]\n",
     "\n",
     "salvar_dados(novos_dados, 'shellsort_NlogN', caminho_arquivo)"
@@ -1771,7 +1773,7 @@
     "        dados = pickle.load(f)\n",
     "    return dados\n",
     "\n",
-    "caminho_arquivo = 'dados.pickle'\n",
+    "caminho_arquivo = file_pickle\n",
     "dados_carregados = carregar_dados(caminho_arquivo)\n",
     "\n",
     "print(\"Conteúdo do arquivo pickle:\")\n",
